--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <dimen name="textSmall">13sp</dimen>
     <dimen name="textMedium">15sp</dimen>
     <dimen name="textTitle">18sp</dimen>
+    <dimen name="textTitleSub">14sp</dimen>
     <dimen name="listItemNormal">55dp</dimen>
     <dimen name="listIconNormal">38dp</dimen>
     <dimen name="titleIconSize">28dp</dimen>
