--- a/app/src/main/res/layout/item_list_file.xml
+++ b/app/src/main/res/layout/item_list_file.xml
@@ -11,6 +11,9 @@
         <variable
             name="meta"
             type="com.merlin.bean.FileMeta" />
+        <variable
+            name="position"
+            type="int" />
         <import type="android.view.View"/>
 
     </data>
@@ -18,6 +21,7 @@
         android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
         android:background="#23000000"
+        android:alpha="@{meta.accessible?1f:0.5f}"
         android:layout_height="@dimen/listItemNormal">
         <ImageView
             android:id="@+id/itemListFile_icon"
