--- a/app/src/main/res/layout/item_sheet_media.xml
+++ b/app/src/main/res/layout/item_sheet_media.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="media"
-            type="com.merlin.media.Media" />
+            type="com.merlin.bean.Media" />
         <import type="android.view.View"/>
         <variable
             name="position"
