--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/textNormal</item>
         <item name="android:textSize">@dimen/textSmall</item>
+        <item name="android:singleLine">true</item>
         <item name="android:gravity">center</item>
     </style>
 
