--- a/app/src/main/res/layout/item_sheet_title.xml
+++ b/app/src/main/res/layout/item_sheet_title.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="sheet"
-            type="com.merlin.bean.SheetCategory" />
+            type="com.merlin.bean.SheetTitle" />
     </data>
     <TextView
         android:text="@{sheet.titel}"
