--- a/app/src/main/res/layout/item_transport.xml
+++ b/app/src/main/res/layout/item_transport.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="task"
-            type="com.merlin.task.Download" />
+            type="com.merlin.task.Transport" />
         <import type="com.merlin.task.Status"/>
         <import type="android.view.View"/>
         <variable
