--- a/app/src/main/res/layout/media_display_play.xml
+++ b/app/src/main/res/layout/media_display_play.xml
@@ -9,149 +9,163 @@
         <import type="com.merlin.player.Time"/>
     </data>
     <RelativeLayout
+        android:id="@+id/media_display_play_rootRL"
+        android:onClick="@{vm::onClick}"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include layout="@layout/medias_all"/>
-        <LinearLayout
-            android:id="@+id/mediaPlayBottomRL"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="16dp"
-            android:orientation="vertical"
+        <RelativeLayout
             android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <RelativeLayout
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:text="2222"
+                android:background="#f00"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+        <include layout="@layout/medias_all"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:id="@+id/mediaPlayBottomRL"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="16dp"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/mediaPlayBottomPositionTV"
-                    android:text="@{Time.formatTime(vm.position)}"
-                    android:textColor="@color/textTitle"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:textSize="@dimen/textSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:id="@+id/mediaPlayBottomDurationTV"
-                    android:text="@{Time.formatTime(vm.duration)}"
-                    android:textColor="@color/textTitle"
-                    android:layout_alignParentRight="true"
-                    android:textSize="@dimen/textSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_height="wrap_content"/>
-                <SeekBar
-                    android:id="@+id/mediaPlayBottomProgressSB"
-                    android:layout_toLeftOf="@id/mediaPlayBottomDurationTV"
-                    android:layout_toRightOf="@id/mediaPlayBottomPositionTV"
-                    binding:OnSeekBarChangeListener="@{vm.seekListener}"
-                    android:progress="@{vm.progress}"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginRight="3dp"
+                <RelativeLayout
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/mediaPlayBottomPositionTV"
+                        android:text="@{Time.formatTime(vm.position)}"
+                        android:textColor="@color/textTitle"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:textSize="@dimen/textSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/mediaPlayBottomDurationTV"
+                        android:text="@{Time.formatTime(vm.duration)}"
+                        android:textColor="@color/textTitle"
+                        android:layout_alignParentRight="true"
+                        android:textSize="@dimen/textSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_height="wrap_content"/>
+                    <SeekBar
+                        android:id="@+id/mediaPlayBottomProgressSB"
+                        android:layout_toLeftOf="@id/mediaPlayBottomDurationTV"
+                        android:layout_toRightOf="@id/mediaPlayBottomPositionTV"
+                        binding:OnSeekBarChangeListener="@{vm.seekListener}"
+                        android:progress="@{vm.progress}"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="true"
+                        android:maxHeight="4.0dip"
+                        android:minHeight="4.0dip"
+                        android:paddingLeft="16.0dip"
+                        android:paddingRight="16.0dip"
+                        android:progressDrawable="@drawable/seekbar"/>
+                </RelativeLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:focusable="true"
-                    android:maxHeight="4.0dip"
-                    android:minHeight="4.0dip"
-                    android:paddingLeft="16.0dip"
-                    android:paddingRight="16.0dip"
-                    android:progressDrawable="@drawable/seekbar"/>
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/activityMediaPlay_playModeIV"
+                        android:onClick="@{vm::onClick}"
+                        android:src="@drawable/single_normal"
+                        android:layout_margin="8dp"
+                        android:layout_width="@dimen/iconSizeSmall"
+                        android:layout_height="@dimen/iconSizeSmall"/>
+
+                    <ImageView
+                        android:id="@+id/activityMediaPlay_preIV"
+                        android:onClick="@{vm::onClick}"
+                        android:src="@drawable/selector_pre"
+                        android:layout_margin="8dp"
+                        android:layout_width="@dimen/iconSizeMedium"
+                        android:layout_height="@dimen/iconSizeMedium"/>
+
+                    <ImageView
+                        android:id="@+id/activityMediaPlay_playPauseIV"
+                        android:onClick="@{vm::onClick}"
+                        android:src="@{vm.playState==Status.STATUS_PLAYING||vm.playState==Status.STATUS_PROGRESS?@drawable/selector_media_pause:@drawable/selector_media_play}"
+                        android:layout_margin="8dp"
+                        android:layout_width="@dimen/iconSizeLarge"
+                        android:layout_height="@dimen/iconSizeLarge"/>
+
+                    <ImageView
+                        android:id="@+id/activityMediaPlay_nextIV"
+                        android:onClick="@{vm::onClick}"
+                        android:src="@drawable/selector_next"
+                        android:layout_margin="8dp"
+                        android:layout_width="@dimen/iconSizeMedium"
+                        android:layout_height="@dimen/iconSizeMedium"/>
+
+                    <ImageView
+                        android:src="@drawable/selector_menu"
+                        android:layout_margin="8dp"
+                        android:layout_width="@dimen/iconSizeSmall"
+                        android:layout_height="@dimen/iconSizeSmall"/>
+                </LinearLayout>
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_above="@id/mediaPlayBottomRL"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/album_default"
+                    android:alpha="0.3"
+                    android:layout_marginBottom="20dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:orientation="horizontal"
+                    android:layout_centerHorizontal="true"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:src="@drawable/heart_normal"
+                        android:layout_margin="10dp"
+                        android:layout_width="@dimen/iconSizeLittle"
+                        android:layout_height="@dimen/iconSizeLittle"/>
+                    <ImageView
+                        android:src="@drawable/download_media_normal"
+                        android:layout_margin="10dp"
+                        android:layout_width="@dimen/iconSizeLittle"
+                        android:layout_height="@dimen/iconSizeLittle"/>
+                    <ImageView
+                        android:src="@drawable/add_sort_normal"
+                        android:layout_margin="10dp"
+                        android:layout_width="@dimen/iconSizeLittle"
+                        android:layout_height="@dimen/iconSizeLittle"/>
+
+                    <ImageView
+                        android:src="@drawable/share_normal"
+                        android:layout_margin="10dp"
+                        android:layout_width="@dimen/iconSizeLittle"
+                        android:layout_height="@dimen/iconSizeLittle"/>
+                </LinearLayout>
+
             </RelativeLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/activityMediaPlay_playModeIV"
-                    android:onClick="@{vm::onClick}"
-                    android:src="@drawable/single_normal"
-                    android:layout_margin="8dp"
-                    android:layout_width="@dimen/iconSizeSmall"
-                    android:layout_height="@dimen/iconSizeSmall"/>
-
-                <ImageView
-                    android:id="@+id/activityMediaPlay_preIV"
-                    android:onClick="@{vm::onClick}"
-                    android:src="@drawable/selector_pre"
-                    android:layout_margin="8dp"
-                    android:layout_width="@dimen/iconSizeMedium"
-                    android:layout_height="@dimen/iconSizeMedium"/>
-
-                <ImageView
-                    android:id="@+id/activityMediaPlay_playPauseIV"
-                    android:onClick="@{vm::onClick}"
-                    android:src="@{vm.playState==Status.STATUS_PLAYING||vm.playState==Status.STATUS_PROGRESS?@drawable/selector_media_pause:@drawable/selector_media_play}"
-                    android:layout_margin="8dp"
-                    android:layout_width="@dimen/iconSizeLarge"
-                    android:layout_height="@dimen/iconSizeLarge"/>
-
-                <ImageView
-                    android:id="@+id/activityMediaPlay_nextIV"
-                    android:onClick="@{vm::onClick}"
-                    android:src="@drawable/selector_next"
-                    android:layout_margin="8dp"
-                    android:layout_width="@dimen/iconSizeMedium"
-                    android:layout_height="@dimen/iconSizeMedium"/>
-
-                <ImageView
-                    android:id="@+id/activityMediaPlay_menuIV"
-                    android:onClick="@{vm::onClick}"
-                    android:src="@drawable/menu_normal"
-                    android:layout_margin="8dp"
-                    android:layout_width="@dimen/iconSizeSmall"
-                    android:layout_height="@dimen/iconSizeSmall"/>
-            </LinearLayout>
-        </LinearLayout>
-        <RelativeLayout
-            android:layout_above="@id/mediaPlayBottomRL"
-            android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="match_parent">
-            <ImageView
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/album_default"
-                android:alpha="0.3"
-                android:layout_marginBottom="20dp"
-                android:layout_width="150dp"
-                android:layout_height="150dp"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal"
-                android:layout_centerHorizontal="true"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:src="@drawable/heart_normal"
-                    android:layout_margin="10dp"
-                    android:layout_width="@dimen/iconSizeLittle"
-                    android:layout_height="@dimen/iconSizeLittle"/>
-                <ImageView
-                    android:src="@drawable/download_media_normal"
-                    android:layout_margin="10dp"
-                    android:layout_width="@dimen/iconSizeLittle"
-                    android:layout_height="@dimen/iconSizeLittle"/>
-                <ImageView
-                    android:src="@drawable/add_sort_normal"
-                    android:layout_margin="10dp"
-                    android:layout_width="@dimen/iconSizeLittle"
-                    android:layout_height="@dimen/iconSizeLittle"/>
-
-                <ImageView
-                    android:src="@drawable/share_normal"
-                    android:layout_margin="10dp"
-                    android:layout_width="@dimen/iconSizeLittle"
-                    android:layout_height="@dimen/iconSizeLittle"/>
-            </LinearLayout>
-
         </RelativeLayout>
     </RelativeLayout>
 </layout>
