--- a/app/src/main/res/layout/media_display_sheets.xml
+++ b/app/src/main/res/layout/media_display_sheets.xml
@@ -15,18 +15,33 @@
         <LinearLayout
             android:visibility="@{vm.isEnableSheets()?View.VISIBLE:View.GONE}"
             android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <HorizontalScrollView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-            <LinearLayout
-                android:id="@+id/activityMediaSheetsList_contentLL"
-                android:orientation="horizontal"
-                android:layout_marginBottom="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
+              <LinearLayout
+                  android:orientation="horizontal"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content">
+                  <TextView
+                      android:id="@+id/test"
+                      enableModelClick="@{true}"
+                      android:text="@string/all"
+                      style="@style/sheetCategoryTitleStyle"/>
+                  <TextView
+                      enableModelClick="@{true}"
+                      android:text="@string/favorite"
+                      style="@style/sheetCategoryTitleStyle"/>
+                  <androidx.recyclerview.widget.RecyclerView
+                      android:layout_marginBottom="10dp"
+                      android:visibility="gone"
+                      binding:adapter="@{vm.titleAdapter}"
+                      android:layout_width="match_parent"
+                      android:layout_height="300px"/>
+              </LinearLayout>
             </HorizontalScrollView>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/mediaSheetLayout_sheetsRV"
