--- a/app/src/main/res/layout/item_list_file.xml
+++ b/app/src/main/res/layout/item_list_file.xml
@@ -20,7 +20,8 @@
     <RelativeLayout
         android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
-        android:background="#23000000"
+        android:clickable="true"
+        android:background="@drawable/selector_round_dark_corner_small"
         android:alpha="@{meta.accessible?1f:0.5f}"
         android:layout_height="@dimen/listItemNormal">
         <ImageView
