--- a/app/src/main/res/layout/activity_media_play.xml
+++ b/app/src/main/res/layout/activity_media_play.xml
@@ -17,6 +17,7 @@
       android:layout_height="match_parent">
 
       <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/test"
           binding:adapter="@{vm.displayAdapter}"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
